load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["google_api_http.go"],
    importpath = "github.com/pseudomuto/protoc-gen-doc/extensions/google_api_http",
    visibility = ["//visibility:public"],
    deps = [
        "//extensions:go_default_library",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["google_api_http_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//extensions:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)
